# cambium

./: .gitignore  README.md  demo.py  package-lock.json  package.json  pyproject.toml
defaults/: config.yaml  constitution-template.md  metrics.yaml  timers.yaml  tunable-manifest.yaml
defaults/evals/: attention-budget-creation.yaml  canary-cascade.yaml  consolidator-belief-creation.yaml  consolidator-metric-review.yaml  sentry-metric-review.yaml  (+8 more)
docs/: architecture.md  hitl-protocol.md  phase1-implementation-plan.md  preference-architecture.md  ui-design.md
scripts/: live_cascade_demo.py  live_skill_test.py
tests/: dummy_mcp_server.py  test_claude_code_adapter.py  test_claude_code_usage.py  test_cli.py  test_clickup_poller.py  test_constitution.py  test_consumer.py  test_episode_store.py  test_episodes_api.py  test_eval_model.py  test_eval_staging.py  test_hitl_integration.py  test_integration.py  test_manifest.py  test_mcp_integration.py  test_memory_service.py  test_metric_api.py  test_metric_model.py  test_metric_runner.py  test_metric_store.py  test_metrics_http.py  test_metrics_integration.py  test_models.py  test_phase4.py  test_preference_e2e.py  test_preference_service.py  test_preference_store.py  test_preferences.py  test_preferences_integration.py  test_protect_repo_hook.py  test_queue.py  test_request_service.py  test_request_store.py  test_routines.py  test_runner.py  test_save_images.py  test_schedule_source.py  test_self_improvement_classifier.py  test_server.py  test_session_store.py  (+8 more)
ui/: index.html  package-lock.json  package.json  vite.config.ts
(+205 files in other folders)
